[package]
name = "undertaker"
version = "0.1.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.72", features = ["full", "extra-traits"]}
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
colored = "2.0.0"
env_logger = "0.8.4"
log = "0.4.14"
uuid = { version = "0.8.2", features = ["v4"] }